--- a/src/content/styles/Base/Structure.scss
+++ b/src/content/styles/Base/Structure.scss
@@ -38,8 +38,11 @@ body {
   top: 0;
   left: 0;
   z-index: 200;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .overlay {
     position: absolute;
     width: 100%;
